--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -9,6 +9,11 @@ on:
 
   workflow_dispatch:
 
+env:
+  # SimpleCov suggests setting the JRuby --debug flag to ensure that coverage
+  # results from JRuby are complete.
+  JRUBY_OPTS: --debug
+
 # Supported platforms / Ruby versions:
 #  - Ubuntu: MRI (3.1, 3.2, 3.3), TruffleRuby (24), JRuby (9.4)
 #  - Windows: MRI (3.1), JRuby (9.4)
@@ -31,9 +36,6 @@ jobs:
           - ruby: "jruby-9.4"
             operating-system: windows-latest
 
-    env:
-      JRUBY_OPTS: --debug
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -52,9 +54,6 @@ jobs:
 
     needs: [build]
     runs-on: ubuntu-latest
-
-    env:
-      JRUBY_OPTS: --debug
 
     steps:
       - name: Checkout
